# DownMeets

./: .env-example  .gitignore  README.md  README_PTBR.md  download_meet.py  main.py  pyproject.toml  todo.md  urls.txt
core/: __init__.py  download.py  summarize.py  transcribe.py  utils.py
output/: metadata.json
output/transcriptions/: transcription_4db8bfe5_20250423_003139.txt
